# kentro-memory-demo

./: .env.example  .gitignore  CHANGE_LOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  Taskfile.yaml  demo.md  implementation-handoff.md  kentro.toml  memory-system.md  memory.md  pyproject.toml  tenants.json
.claude/skills/sync-types/: SKILL.md
examples/synthetic_corpus/: acme_call_2026-04-15.md  acme_ticket_142.md  acme_ticket_157.md  acme_ticket_162.md  ali_meeting_note_2026-03-10.md  ali_meeting_note_2026-04-02.md  email_jane_2026-04-17.md  internal_slack_thread_2026-04-19.md
scripts/: generate_corpus.py
scripts/git-hooks/: pre-commit
tests/integration/: end_to_end_smoke_test.py
tests/unit/: _helpers.py  acl_test.py  api_smoke_test.py  cache_test.py  catalog_test.py  cli_test.py  conflict_test.py  conftest.py  demo_helpers_test.py  events_test.py  factory_test.py  healthz_test.py  ingestor_test.py  mcp_smoke_test.py  nl_to_ruleset_test.py  resolve_test.py  rules_helpers_test.py  schema_test.py  sdk_client_test.py  skill_edit_invalidation_test.py  store_test.py  types_parity_test.py  viz_test.py
